# streamlit_markowitz

./: LICENSE  README.md  app.py  noxfile.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: python-app.yml
.streamlit/: config.toml
data/: MicroRets.csv  disclaimer.txt  ix_data.parquet  micfin_exp_rets.csv  micfin_q_rets.csv  micfin_utils.py  quarterly_rets.csv  t_exp.parquet  t_fund.csv  t_keyfigures.parquet  t_price.parquet  usage.txt
micfin/: app.py  utils.py
pages/: Historical_Risk_Return.py  Micro_Finance_Analyzer.py
scripts/: Historical_Risk_Return.py  Markowitz.py  Micro_Finance_Analyzer.py
src/: charts.py  data_manager.py  optimization.py
tests/: test_Historical_Risk_Return.py  test_app.py  test_charts.py  test_data_manager.py  test_optimization.py
tests/data/: M_Funds.csv  df_chart_exp.parquet  df_r_cum_with_dd.parquet  r_cum.parquet  t_exp.parquet  t_fund.csv
